<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Quick天气</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="city_default"></string>
	<string name="change">更换</string>
	<string name="select_city">选择城市</string>
	
	<string name="beijing">北京</string>
	<string name="shanghai">上海</string>
	<string name="guangzhou">广州</string>
	<string name="shenzhen">深圳</string>
	<string name="nanjing">南京</string>
	<string name="hangzhou">杭州</string>
	<string name="tianjin">天津</string>
	<string name="changsha">长沙</string>
	<string name="wuhan">武汉</string>
	<string name="zhengzhou">郑州</string>
	<string name="haebin">哈尔滨</string>
	<string name="changchun">长春</string>
	<string name="shenyang">沈阳</string>
	<string name="nanchan">南昌</string>
	<string name="hefei">合肥</string>
	<string name="shijiazhuang">石家庄</string>
	<string name="chongqing">重庆</string>
	<string name="nanning">南宁</string>
	<string name="haikou">海口</string>
	<string name="kunming">昆明</string>
	<string name="xian">西安</string>
	<string name="jinan">济南</string>
	<string name="fuzhou">福州</string>
	<string name="taiyuan">太原</string>
</resources>
