<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:background="#63a8fa">
	    <TextView
            android:id="@+id/changecity_back"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_centerVertical="true"
	        android:layout_marginLeft="10dip"
	        android:background="@drawable/changecityback_bg"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_city"
            android:layout_centerInParent="true"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:textSize="22sp"/>
       <Button 
           android:id="@+id/changecity_locate"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentRight="true"
           android:layout_centerVertical="true"
           android:layout_marginRight="8dip"
           android:text="定位"
           android:textSize="20sp"
           android:background="@drawable/location_bg"/>
    </RelativeLayout>
		<RelativeLayout 
	    android:paddingBottom="20dp"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content">
	    <RelativeLayout 
	        android:id="@+id/top"
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:layout_alignParentTop="true"
	    	android:paddingLeft="10dp"
	    	android:paddingRight="10dp"
	    	android:background="@drawable/search_top_background">
	        <Button android:id="@+id/btnSearch"
	        	android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:gravity="center"
	        	android:layout_centerVertical="true"
	        	android:layout_alignParentRight="true"
	        	android:layout_marginTop="15dp"
	          	android:layout_marginBottom="15dp"
	        	android:textSize="16sp"
	        	android:textStyle="bold"
	        	android:background="@drawable/search_btn_background"
	        	android:text="搜索"/>
	        <RelativeLayout 
	            android:id="@+id/rlSearchFrameDelete"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	        	android:layout_centerVertical="true"
				android:gravity="center_vertical"
	            android:layout_toLeftOf="@id/btnSearch">
		    	<EditText
		    	    android:id="@+id/etSearch"
		    	    android:layout_width="fill_parent"
		    	    android:layout_height="wrap_content"
		    	    android:layout_alignParentLeft="true"
		    	    android:layout_alignParentTop="true"
		    	    android:background="@drawable/search_input"
		    	    android:ems="10"
		    	    android:hint="请输入城市名"
		    	    android:paddingLeft="40dp"
		     	    android:layout_marginRight="10dp"
		    	    android:singleLine="true"
		    	    android:textSize="16sp">
		    	</EditText>
		    	 <ImageView 
		    	    android:id="@+id/ivDeleteText"
		    	    android:layout_width="wrap_content"
		    	    android:layout_height="wrap_content"
		    	    android:layout_alignParentRight="true"
		    	    android:src="@drawable/delete"
		    	    android:layout_centerInParent="true"
		    	    android:paddingRight="20dp"
		    	    android:focusable="true"
		    	    android:focusableInTouchMode="true"/>         
	        </RelativeLayout>
	    </RelativeLayout>
	</RelativeLayout>
	<TextView 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="20dip"
  	    android:layout_marginBottom="10dip"
	    android:text="热门城市"/>
	<ScrollView 
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent">
		<TableLayout 
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content">
		    <TableRow
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="20dip">
		        <TextView
		            android:id="@+id/beijing"
		            android:layout_weight="1"
		            android:layout_width="0dip"
		            android:layout_height="wrap_content"
		            android:gravity="center"
		            android:textSize="20sp"
		            android:text="@string/beijing"/>
		        <TextView
		            android:id="@+id/shanghai"
		            android:layout_weight="1"
		            android:layout_width="0dip"
		            android:layout_height="wrap_content"
		            android:gravity="center"
		            android:textSize="20sp"
		            android:text="@string/shanghai"/>
		        <TextView
		            android:id="@+id/guangzhou"
		            android:layout_weight="1"
		            android:layout_width="0dip"
		            android:layout_height="wrap_content"
		            android:gravity="center"
		            android:textSize="20sp"
		            android:text="@string/guangzhou"/>
		    </TableRow>
		    <TableRow
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="20dip">
		        <TextView
		            android:id="@+id/shenzhen"
		            android:layout_weight="1"
		            android:layout_width="0dip"
		            android:layout_height="wrap_content"
		            android:gravity="center"
		            android:textSize="20sp"
		            android:text="@string/shenzhen"/>
		        <TextView
		            android:id="@+id/nanjing"
		            android:layout_weight="1"
		            android:layout_width="0dip"
		            android:layout_height="wrap_content"
		            android:gravity="center"
		            android:textSize="20sp"
		            android:text="@string/nanjing"/>
		        <TextView
		            android:id="@+id/hangzhou"
		            android:layout_weight="1"
		            android:layout_width="0dip"
		            android:layout_height="wrap_content"
		            android:gravity="center"
		            android:textSize="20sp"
		            android:text="@string/hangzhou"/>
		    </TableRow>
		    <TableRow
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="20dip">
		        <TextView
		            android:id="@+id/tianjin"
		            android:layout_weight="1"
		            android:layout_width="0dip"
		            android:layout_height="wrap_content"
		            android:gravity="center"
		            android:textSize="20sp"
		            android:text="@string/tianjin"/>
		        <TextView
		            android:id="@+id/changsha"
		            android:layout_weight="1"
		            android:layout_width="0dip"
		            android:layout_height="wrap_content"
		            android:gravity="center"
		            android:textSize="20sp"
		            android:text="@string/changsha"/>
		        <TextView
		            android:id="@+id/wuhan"
		            android:layout_weight="1"
		            android:layout_width="0dip"
		            android:layout_height="wrap_content"
		            android:gravity="center"
		            android:textSize="20sp"
		            android:text="@string/wuhan"/>
		    </TableRow>
		    <TableRow
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="20dip">
		        <TextView
		            android:id="@+id/zhengzhou"
		            android:layout_weight="1"
		            android:layout_width="0dip"
		            android:layout_height="wrap_content"
		            android:gravity="center"
		            android:textSize="20sp"
		            android:text="@string/zhengzhou"/>
		        <TextView
		            android:id="@+id/haebin"
		            android:layout_weight="1"
		            android:layout_width="0dip"
		            android:layout_height="wrap_content"
		            android:gravity="center"
		            android:textSize="20sp"
		            android:text="@string/haebin"/>
		        <TextView
		            android:id="@+id/changchun"
		            android:layout_weight="1"
		            android:layout_width="0dip"
		            android:layout_height="wrap_content"
		            android:gravity="center"
		            android:textSize="20sp"
		            android:text="@string/changchun"/>
		    </TableRow>
		    <TableRow
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="20dip">
		        <TextView
		            android:id="@+id/shenyang"
		            android:layout_weight="1"
		            android:layout_width="0dip"
		            android:layout_height="wrap_content"
		            android:gravity="center"
		            android:textSize="20sp"
		            android:text="@string/shenyang"/>
		        <TextView
		            android:id="@+id/nanchan"
		            android:layout_weight="1"
		            android:layout_width="0dip"
		            android:layout_height="wrap_content"
		            android:gravity="center"
		            android:textSize="20sp"
		            android:text="@string/nanchan"/>
		        <TextView
		            android:id="@+id/hefei"
		            android:layout_weight="1"
		            android:layout_width="0dip"
		            android:layout_height="wrap_content"
		            android:gravity="center"
		            android:textSize="20sp"
		            android:text="@string/hefei"/>
		    </TableRow>
		    <TableRow
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="20dip">
		        <TextView
		            android:id="@+id/shijiazhuang"
		            android:layout_weight="1"
		            android:layout_width="0dip"
		            android:layout_height="wrap_content"
		            android:gravity="center"
		            android:textSize="20sp"
		            android:text="@string/shijiazhuang"/>
		        <TextView
		            android:id="@+id/chongqing"
		            android:layout_weight="1"
		            android:layout_width="0dip"
		            android:layout_height="wrap_content"
		            android:gravity="center"
		            android:textSize="20sp"
		            android:text="@string/chongqing"/>
		        <TextView
		            android:id="@+id/nanning"
		            android:layout_weight="1"
		            android:layout_width="0dip"
		            android:layout_height="wrap_content"
		            android:gravity="center"
		            android:textSize="20sp"
		            android:text="@string/nanning"/>
		    </TableRow>
		    <TableRow
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="20dip">
		        <TextView
		            android:id="@+id/haikou"
		            android:layout_weight="1"
		            android:layout_width="0dip"
		            android:layout_height="wrap_content"
		            android:gravity="center"
		            android:textSize="20sp"
		            android:text="@string/haikou"/>
		        <TextView
		            android:id="@+id/kunming"
		            android:layout_weight="1"
		            android:layout_width="0dip"
		            android:layout_height="wrap_content"
		            android:gravity="center"
		            android:textSize="20sp"
		            android:text="@string/kunming"/>
		        <TextView
		            android:id="@+id/xian"
		            android:layout_weight="1"
		            android:layout_width="0dip"
		            android:layout_height="wrap_content"
		            android:gravity="center"
		            android:textSize="20sp"
		            android:text="@string/xian"/>
		    </TableRow>
		    <TableRow
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="20dip">
		        <TextView
		            android:id="@+id/jinan"
		            android:layout_weight="1"
		            android:layout_width="0dip"
		            android:layout_height="wrap_content"
		            android:gravity="center"
		            android:textSize="20sp"
		            android:text="@string/jinan"/>
		        <TextView
		            android:id="@+id/fuzhou"
		            android:layout_weight="1"
		            android:layout_width="0dip"
		            android:layout_height="wrap_content"
		            android:gravity="center"
		            android:textSize="20sp"
		            android:text="@string/fuzhou"/>
		        <TextView
		            android:id="@+id/taiyuan"
		            android:layout_weight="1"
		            android:layout_width="0dip"
		            android:layout_height="wrap_content"
		            android:gravity="center"
		            android:textSize="20sp"
		            android:text="@string/taiyuan"/>
		    </TableRow>
		</TableLayout>
	</ScrollView>
	
</LinearLayout>
